<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EAround</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="returnButton">Return Button</string>
    <string name="retypePassword">Retype Password</string>
    <string name="email">Email</string>
    <string name="retypeEmail">Retype Email</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="personal">Personal</string>
    <string name="city">City</string>
    <string name="empty_field">Empty Field</string>
    <string name="logged">Logged</string>
    <string name="error">Error</string>
    <string name="not_valid">Not Valid</string>
    <string name="not_equal">Not Equal</string>
    <string name="sending">Sending</string>
    <string name="back">Back</string>
    <string name="arrow"><![CDATA[<-]]></string>
    <string name="add_event">Add Event</string>
    <string name="myEvent">My Event</string>
    <string name="logout">Logout</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="position">Position</string>
    <string name="distance">Distance</string>
    <string name="days">Days</string>
    <string name="distanceDefault">5 km</string>
    <string name="daysDefault">In the next 1 day(s)</string>
    <string name="types">Types</string>
    <string name="party">Party</string>
    <string name="cultural">Cultural</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="find">Find</string>
    <string name="rememberPosition">Remember position</string>
    <string name="newEvents">New Events</string>
    <string name="menu">Menu</string>
    <string name="API_KEY">AIzaSyA0ID6pHXih7zDjTM9O_35S-5FPyzufVRQ</string>
    <string name="youAreHere">You Are Here</string>
    <string name="eventsNotFound">Events Not Found</string>
    <string name="notConnected">Not Connected</string>
    <string name="clicked">Clicked</string>
    <string name="addNewEvent">Add New Event</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="day">Date</string>
    <string name="description">Description</string>
    <string name="addEvent">Add Event</string>
    <string name="eventNotValid">Event Not Valid</string>
    <string name="added">Added</string>
    <string name="noEvents">There are no events</string>
    <string name="event_editor">Event Editor</string>
    <string name="modify">Modify</string>
    <string name="remove">Remove</string>
    <string name="removing">Removing</string>
    <string name="removed">Removed</string>
    <string name="updating">Updating</string>
    <string name="updated">Updated</string>
    <string name="import_from_server">Import From Server</string>
    <string name="imported">Imported</string>
    <string name="followed">Followed</string>
    <string name="followed_events">Followed Events</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="delete">delete</string>
    <string name="signal">signal</string>
    <string name="done">done</string>
    <string name="signaled">signaled</string>
    <string name="myPosition">myPosition</string>
    <string name="imageicon">imageicon</string>
</resources>