<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginMin"
    android:background="@android:drawable/screen_background_light_transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow"
        android:textSize="@dimen/button1_textSize"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="@dimen/input1_width"
        android:layout_height="@dimen/input1_height"
        android:layout_marginLeft="@dimen/marginMax"
        android:layout_marginRight="@dimen/marginMax"
        android:layout_marginTop="@dimen/marginMiddle"
        android:hint="@string/username"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/input1_textSize"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/register_password1"
        android:layout_width="@dimen/input1_width"
        android:layout_height="@dimen/input1_height"
        android:layout_marginLeft="@dimen/marginMax"
        android:layout_marginRight="@dimen/marginMax"
        android:layout_marginTop="@dimen/marginMin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/input1_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_password2"
        android:layout_width="@dimen/input1_width"
        android:layout_height="@dimen/input1_height"
        android:layout_marginLeft="@dimen/marginMax"
        android:layout_marginRight="@dimen/marginMax"
        android:layout_marginTop="@dimen/marginMin"
        android:hint="@string/retypePassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/input1_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password1" />

    <EditText
        android:id="@+id/register_email1"
        android:layout_width="@dimen/input1_width"
        android:layout_height="@dimen/input1_height"
        android:layout_marginLeft="@dimen/marginMax"
        android:layout_marginRight="@dimen/marginMax"
        android:layout_marginTop="@dimen/marginMin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/input1_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password2" />

    <EditText
        android:id="@+id/register_email2"
        android:layout_width="@dimen/input1_width"
        android:layout_height="@dimen/input1_height"
        android:layout_marginLeft="@dimen/marginMax"
        android:layout_marginRight="@dimen/marginMax"
        android:layout_marginTop="@dimen/marginMin"
        android:hint="@string/retypeEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/input1_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email1" />

    <Button
        android:id="@+id/register_register"
        android:layout_width="@dimen/button1_width"
        android:layout_height="@dimen/button1_height"
        android:layout_marginLeft="@dimen/marginMax"
        android:layout_marginRight="@dimen/marginMax"
        android:layout_marginTop="@dimen/marginMiddle"
        android:layout_marginBottom="@dimen/marginMiddle"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textSize="@dimen/button1_textSize"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email2"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>