<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_p">


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/home_searchButton"
            android:layout_width="@dimen/button1_width"
            android:layout_height="@dimen/button1_height"
            android:layout_marginTop="@dimen/marginMiddle"
            android:background="@color/colorPrimary"
            android:text="@string/search"
            android:textSize="@dimen/button1_textSize"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/home_homeButton"
            android:layout_width="@dimen/button2_size"
            android:layout_height="@dimen/button2_size"
            android:layout_marginTop="@dimen/zero"
            android:background="@color/colorPrimary"
            android:text="@string/home"
            android:textSize="@dimen/button2_textSize"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/home_personalButton"
            android:layout_width="@dimen/button1_width"
            android:layout_height="@dimen/button1_height"
            android:layout_marginTop="@dimen/marginMiddle"
            android:background="@color/colorPrimary"
            android:text="@string/personal"
            android:textSize="@dimen/button1_textSize"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/home_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/marginMin"
            android:layout_marginTop="@dimen/zero"
            android:background="@android:drawable/screen_background_light_transparent">
        </FrameLayout>

        <ListView
            android:id="@+id/home_personalMenu"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/marginMin"
            android:layout_marginTop="@dimen/zero"
            android:background="@android:drawable/screen_background_light_transparent" />

    </LinearLayout>

</LinearLayout>